# langfuse_llmops

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
llm-batch/: main.py  prototype.ipynb  pyproject.toml
notebooks/: test.ipynb
