[project]
name = "llm-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-google-genai>=2.0.4",
    "langchain>=0.3.7",
    "langfuse>=2.53.3",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
]
